# shogai

./: .gitignore  :  Cargo.toml  README.md  q
src/: ai.rs  board.rs  invalidmoveerror.rs  lib.rs  main.rs  movement.rs  piece.rs  position.rs
