[package]
name = "shogai"
version = "2.0.0"
authors = ["Bleuez Michael <michael.bleuez2@gmail.com>"]
edition = "2018"
description = "A shogi helper"
readme = "README.md"
repository = "https://github.com/michaelb/shogai"
license = "GPL-3.0"
keywords = ["shogi", "helper", "engine", "shogiban", "board"]
categories = ["game-development","game-engines","games"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.7.3"
arrayvec="0.5.1"
